<resources>
    <string name="app_name">LapitChat</string>
    <string name="close">"NEED A NEW ACOUNT?</string>
    <string name="log_out">Log Out</string>
    <string name="accont_settings">Accont settings</string>
    <string name="all_users">All Users</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email">Email</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
